PMforce/src/objects/Allocation__c.object
<CustomObject>
    <fields>
        <fullName>Allocated_Effort_Hrs__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>For FP Project Only</inlineHelpText>
        <label>Allocated Effort (Hrs)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocation_End_Date__c</fullName>
        <label>Allocation End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allocation_Percentage__c</fullName>
        <label>Allocation Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allocation_Start_Date__c</fullName>
        <label>Allocation Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allocation_Type__c</fullName>
        <label>Allocation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billable</fullName>
                </value>
                <value>
                    <fullName>Non-Billable</fullName>
                </value>
                <value>
                    <fullName>Bench</fullName>
                </value>
                <value>
                    <fullName>Leave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Rate__c</fullName>
        <label>Billing Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CR_Name__c</fullName>
        <formula>Change_RequestL__r.CR_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CR Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_RequestL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change RequestL</label>
        <referenceTo>Change_Request__c</referenceTo>
        <relationshipLabel>Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentYear__c</fullName>
        <formula>TEXT(YEAR(TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentYear</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeEmail__c</fullName>
        <label>EmployeeEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Employee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Allocations (Employee)</relationshipLabel>
        <relationshipName>Allocations1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Project_Name__c</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <formula>Project__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Allocated Employees</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Today_TimeSheet__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Today&apos;s TimeSheet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTimesheetAddedToday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is updated to &apos;true&apos; by workflow when it founds today&apos;s timesheet.</description>
        <label>isTimesheetAddedToday</label>
        <type>Checkbox</type>
    </fields>
    <label>Allocation</label>
    <listViews>
        <fullName>Active_Allocations</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Employee__c</columns>
        <columns>Allocation_End_Date__c</columns>
        <columns>Allocation_Start_Date__c</columns>
        <columns>Project__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Allocation_Percentage__c</columns>
        <columns>Allocation_Type__c</columns>
        <columns>Allocated_Effort_Hrs__c</columns>
        <columns>Remarks__c</columns>
        <columns>Billing_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Allocation_End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Active Allocations</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>Project__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Allocation_Start_Date__c</columns>
        <columns>Allocation_End_Date__c</columns>
        <columns>Allocated_Effort_Hrs__c</columns>
        <columns>Billable__c</columns>
        <columns>Today_TimeSheet__c</columns>
        <columns>isTimesheetAddedToday__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Current_Month_Allocation</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Employee__c</columns>
        <columns>Project__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Allocation_End_Date__c</columns>
        <columns>Allocation_Start_Date__c</columns>
        <columns>Allocation_Percentage__c</columns>
        <columns>Allocated_Effort_Hrs__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Billable__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Non-Billable Allocation</label>
    </listViews>
    <nameField>
        <displayFormat>A{0000000}</displayFormat>
        <label>Allocation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocations</pluralLabel>
    <recordTypes>
        <fullName>FP</fullName>
        <active>true</active>
        <label>FP</label>
    </recordTypes>
    <recordTypes>
        <fullName>TM</fullName>
        <active>true</active>
        <label>TM</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>validation_for_change_request_lookup</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(Change_RequestL__c)) &amp;&amp;  cr__c  &lt;&gt; true</errorConditionFormula>
        <errorDisplayField>cr__c</errorDisplayField>
        <errorMessage>Please mark this as Change Request</errorMessage>
    </validationRules>
</CustomObject>